fix pokemonDetails bug stats invisible

--- a/public/css/pokedex.css
+++ b/public/css/pokedex.css
@@ -23,6 +23,7 @@
   border-radius: 20px;
   box-shadow: rgb(38, 57, 77) 0px 10px 15px -10px;
   transition: var(--transitionTime);
+  background-color: var(--background-secondary);
 }
 
 .types {
