--- a/public/css/style.css
+++ b/public/css/style.css
@@ -314,6 +314,7 @@ header {
 
   p {
     color: white;
+    font-weight: 600;
   }
 
   figure {
